# doom2d-rembo

./: DEFAULT.CFG  INSTALL  README  a8.c  bmap.c  bmap.h  config.c  config.h  doom2d_deb_maker  doom2d_tarball_maker  dots.c  dots.h  error.c  error.h  files.c  files.h  glob.h  items.c  items.h  keyb.c  keyb.h  main.c  map.h  memory.c  memory.h  menu.h  misc.h  miscc.c  monster.c  monster.h  music.c  my.c  player.h  redraw.c  smoke.h  sound.c  sound.h  switch.c  switch.h  things.h  (+5 more)
src/: CMakeLists.txt  a8.c  a8.h  anim.c  anim.h  args.c  args.h  bmap.c  bmap.h  config.c  config.h  copy.sh  default.cfg  dots.c  dots.h  error.c  error.h  files.c  files.h  fx.c  fx.h  game.c  game.h  glob.h  input.c  input.h  items.c  items.h  keyb.c  keyb.h  main.c  map.c  map.h  memory.c  memory.h  menu.c  menu.h  misc.h  miscc.c  monster.c  (+26 more)
src/cmake/: i686-w64-mingw32.cmake  kos32-tcc.cmake  x86_64-w64-mingw32.cmake
src/common/: cp866.c  endianness.h  files.c  files.h  streams.c  streams.h  wadres.c  wadres.h
src/gl/: render.c
src/kos32/: files.c  kos32.h  main.c  streams.c  streams.h
src/libs/cp866/: cp866.c  cp866.h
src/openal/: sound.c
src/sdl/: files.c  main.c
src/sdl2/: files.c  main.c  streams.c  streams.h
src/sdlmixer/: sound.c
src/soft/: render.c  vga.c  vga.h
src/stubren/: render.c
src/stubsnd/: sound.c
src/stubsys/: files.c  main.c
